# fast_api_template

./: .dockerignore  .editorconfig  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  lets.yaml
src/: app.py  pyproject.toml
src/api/: views.py
src/infrastucture/: middlewares.py  models.py
src/migrations/: env.py
src/settings/: db_settings.py  log_settings.py  settings.py
